fix : change mode icons color to be more visible

--- a/src/app/components/users-list/users-list.component.scss
+++ b/src/app/components/users-list/users-list.component.scss
@@ -17,7 +17,7 @@
         align-self: flex-end;
         .mat-icon {
           margin-left: 10px;
-          color: $primary-text;
+          color: $white;
           cursor: pointer;
           &:hover {
             color: $hover-icon;
